# mutouplotlib

./: README.md  pyproject.toml
src/mutouplotlib/: __init__.py  style.py  utils.py
src/mutouplotlib/plots/: __init__.py  bar.py  heatmap.py  plot.py  scatter.py  trend.py
