[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutouplotlib"
dynamic = ["version"]
description = 'my plotting library based on Matplotlib'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "ZY Tan", email = "2334247405@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
]

[project.urls]
Documentation = "https://github.com/ifsihj/mutouplotlib#readme"
Issues = "https://github.com/ifsihj/mutouplotlib/issues"
Source = "https://github.com/ifsihj/mutouplotlib"

[tool.hatch.version]
path = "src/mutouplotlib/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mutouplotlib tests}"

[tool.coverage.run]
source_pkgs = ["mutouplotlib", "tests"]
branch = true
parallel = true
omit = [
  "src/mutouplotlib/__about__.py",
]

[tool.coverage.paths]
mutouplotlib = ["src/mutouplotlib", "*/mutouplotlib/src/mutouplotlib"]
tests = ["tests", "*/mutouplotlib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
